tweak css, putting the D in CRUD

--- a/clienttemplates/controls/projectuser.jade
+++ b/clienttemplates/controls/projectuser.jade
@@ -12,4 +12,4 @@
             | ftp
     button.btn.btn-success(data-id=projectid)
         span.glyphicon.glyphicon-plus
-    span Add a User
+    span.spnMessage Add a User
