--- a/templates/navigation.jade
+++ b/templates/navigation.jade
@@ -1,5 +1,5 @@
-.divNav
-    ul.nav.nav-pills
+.divNav.navbar.navbar-default.navbar-fixed-top
+    ul.nav.navbar-nav
         li
             a#navHome(href="#home") Login
         li
