--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,10 +27,6 @@ body {padding: 5px;
     overflow: hidden;
 }
 
-/*.divProjectUser > * {
-    float: left;
-}*/
-
 .divProjectUser .btn {
     padding: 8px 9px 10px 11px;
     margin: 0 10px;
@@ -38,6 +34,11 @@ body {padding: 5px;
 
 .divProjectUser > span {
     padding: 6px 10px;
+}
+
+ul {
+    width: 75%;
+    margin: 0 auto 10px auto;
 }
 
 .liProjects, .liUsers {
@@ -93,7 +94,7 @@ body {padding: 5px;
 .liProjects .divControls {
     opacity: 0;
     display: none;
-    transition: opacity .25s ease-in-out;
+    transition: opacity .3s ease-in-out;
 }
 
 .liProjects .divControls.animated {
