--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,9 +1,11 @@
+doctype html
 html
     head
         title!= title
         link(rel='stylesheet',href='/css/bootstrap.spacelab.min.css')
         link(rel='stylesheet',href='/css/main.css')
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+        meta(http-equiv='X-UA-Compatible',content='IE=edge,chrome=1')
     body
         include navigation
         #content
