putting the D in CRUD

--- a/clienttemplates/projects.jade
+++ b/clienttemplates/projects.jade
@@ -11,3 +11,5 @@ ul.ulProjects
                     .divDescription= model.attributes.description
                 .divProjectUser(id='divProjectUsers-'+model.attributes.id, data-id=model.attributes.id)
                 ul.ulUsers.hidden(id='ulUsers-'+model.attributes.id)
+                a.glyphicon.glyphicon-trash(data-id=model.attributes.id)
+
