template change to newuser page

--- a/clienttemplates/newproject.jade
+++ b/clienttemplates/newproject.jade
@@ -9,4 +9,4 @@ h1 Create a New Project
             label(for='description') Description:
             input.form-control(type='text',name='description')
         #divMessage.hidden
-        button.btn.btn-success(type='button')#btnCreate Create New Project
+        button.btn.btn-success(type='button')#btnCreateProject Create New Project
